--- a/src/main/resources/templates/front-end/news/news.html
+++ b/src/main/resources/templates/front-end/news/news.html
@@ -883,6 +883,7 @@ td:nth-child(2) {
 			<div class="row">
 				<div class="col-lg-12">
 					<!-- Start Dashboard Top  -->
+<!-- 					個人 banner 會員中心 -->
 					<div class="rbt-dashboard-content-wrapper">
 						<div class="tutor-bg-photo bg_image bg_image--23 height-350"></div>
 						<!-- Start Tutor Information  -->
