--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -22,6 +22,10 @@ display:block;
 .sessionUId{
 display:none;
 }
+.bg_image--23 {
+	background-image: url(../images/member_banner.png);
+}
+
 </style>
 <body class="rbt-header-sticky">
 	<header th:replace="front-end/header.html"></header>
@@ -41,7 +45,37 @@ display:none;
 			<div class="row">
 				<div class="col-lg-12">
 
-
+					<div class="rbt-dashboard-content-wrapper">
+						<div class="tutor-bg-photo bg_image bg_image--23 height-350"></div>
+						<!-- Start Tutor Information  -->
+						<div class="rbt-tutor-information">
+							<div class="rbt-tutor-information-left">
+								<div class="thumbnail rbt-avatars size-lg">
+									<img
+										th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
+										alt="">
+								</div>
+								<div class="tutor-content">
+									<h5 class="title" th:text="${userVO.uNickname}">Emily Hannah</h5>
+									<ul class="rbt-meta rbt-meta-white mt--5">
+										<li><i class="feather-book"></i>5 Courses Enroled</li>
+										<li><i class="feather-award"></i>4 Certificate</li>
+									</ul>
+								</div>
+							</div>
+							<div class="rbt-tutor-information-right">
+								<div class="tutor-btn">
+									<a class="rbt-btn btn-md hover-icon-reverse" href="#"> <span
+										class="icon-reverse-wrapper"> <span class="btn-text">教練模式</span>
+											<span class="btn-icon"><i class="feather-arrow-right"></i></span>
+											<span class="btn-icon"><i class="feather-arrow-right"></i></span>
+									</span>
+									</a>
+								</div>
+							</div>
+						</div>
+						<!-- End Tutor Information  -->
+					</div>
 
 
 					<div class="row g-5">
@@ -54,9 +88,9 @@ display:none;
 
 						<div class="col-lg-9">
 							<div class="rbt-dashboard-content ">
-								<span th:text="${userVO.uId}" class="uId"></span>
-								<span th:text="${userVO.uNickname}" class="uNickname"></span>
-								<span th:text="${userVO.uHeadshot}" class="uHeadshot"></span>
+								<span th:text="${userShowVO.uId}" class="uId"></span>
+								<span th:text="${userShowVO.uNickname}" class="uNickname"></span>
+								<span th:text="${userShowVO.uHeadshot}" class="uHeadshot"></span>
 								<div class="input-wrapper">
 									<input type="text" placeholder="搜尋其他用戶"
 										class="search-member-social"> <img
@@ -85,10 +119,10 @@ display:none;
 								<div class="content-social-post">
 									<div class="content-inner">
 										<div class="user-section-title">
-											<span th:text="${userVO.uId}" class="uid-for-send"></span>
+											<span th:text="${userShowVO.uId}" class="uid-for-send"></span>
 											<div id="article">
 												<img
-													th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
+													th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userShowVO.uId}"
 													alt="">
 											</div>
 											<div id="article member-col">
@@ -100,7 +134,7 @@ display:none;
 											<div id="post member-col">
 												<h4 class="post-num"
 													style="display: flex; justify-content: center; padding-top: 2rem; margin-top: 2rem; margin-bottom: 0;"
-													th:text="${#lists.size(userVO.socialposts.?[spstatus == 1])}">a</h4>
+													th:text="${#lists.size(userShowVO.socialposts.?[spstatus == 1])}">a</h4>
 												<h4 class="rbt-title-style-3"
 													style="padding-top: 2rem; padding-bottom: 0;">個人貼文</h4>
 											</div>
@@ -122,10 +156,10 @@ display:none;
 <!-- 									測試	 -->
 <span th:text="${sessionUId}" class="sessionUId"></span>
 									<input type="text" placeholder="在想甚麼呢?"
-										class="member-post-input" th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}">
+										class="member-post-input" th:if="${userShowVO.uId != null and sessionUId != null and userShowVO.uId == sessionUId}">
 										
 
-									<p class="add-post" th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}">新增貼文</p>
+									<p class="add-post" th:if="${userShowVO.uId != null and sessionUId != null and userShowVO.uId == sessionUId}">新增貼文</p>
 
 
 
@@ -187,14 +221,14 @@ display:none;
 							<span th:if="${navUId != null}" th:text="${navUId}"
 								class="navUId">aaa</span>
 							<!-- 							<span th:if="${#strings.isEmpty(navUId)}" >測試字 - 新增貼文</span> -->
-							<div th:each="socialPost : ${userVO.socialposts}"
+							<div th:each="socialPost : ${userShowVO.socialposts}"
 								th:if="${socialPost.spstatus == 1}">
 
 								<div class="article-post">
 									<div class="title">
 										<div class="title-info-wrapper">
 											<img
-												th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
+												th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userShowVO.uId}"
 												alt="">
 
 											<div class="title-info">
@@ -205,9 +239,9 @@ display:none;
 										</div>
 										<div class="button-container">
 											<img th:src="@{/images/social-edit.png}" alt="" class="edit"
-												th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}"> <img
+												th:if="${userShowVO.uId != null and sessionUId != null and userShowVO.uId == sessionUId}"> <img
 												th:src="@{/images/social-delete.png}"
-												th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}" alt=""
+												th:if="${userShowVO.uId != null and sessionUId != null and userShowVO.uId == sessionUId}" alt=""
 												class="delete-socialpost">
 										</div>
 									</div>
@@ -339,6 +373,9 @@ display:none;
 	$(document).ready(function() {
 	    var lastNewsCount = 0; 
 	    var isFirstRequest = true;
+	    var sessionUId = $(".sessionUId").text();
+	    var lastNewsCount = localStorage.getItem(newsCountKey) ? parseInt(localStorage.getItem(newsCountKey), 10) : 0; 
+// 	    console.log(sessionUId);
 	    
 	    checkNewsUpdate();
 	    setInterval(checkNewsUpdate, 10000); 
@@ -358,7 +395,7 @@ display:none;
 	                    lastNewsCount = count; 
 	                    
 	                }
-	                
+	                localStorage.setItem(newsCountKey, lastNewsCount);
                     console.log("count:"+count);
 
 	            },
