--- a/src/main/resources/templates/front-end/coachsidebar.html
+++ b/src/main/resources/templates/front-end/coachsidebar.html
@@ -16,12 +16,11 @@
                                             </div>
                                             <nav class="mainmenu-nav">
                                                 <ul class="dashboard-mainmenu rbt-default-sidebar-list">
-                                                    <li><a th:href="@{coach_dashboard}"><i class="feather-home"></i><span>教練主頁</span></a></li>
-                                                    <li><a th:href="@{coach_course}"><i class="feather-monitor"></i><span>課程管理</span></a></li>
-                                                    <li><a th:href="@{course_announcement}"><i class="feather-volume-2"></i><span>課程公告</span></a></li>
-                                                    <li><a href="instructor-wishlist.html"><i class="feather-bookmark"></i><span>廣告投放</span></a></li>
-                                                    <li><a href="instructor-order-history.html"><i class="feather-shopping-bag"></i><span>金流設定</span></a></li>
-                                                    <li><a href="instructor-reviews.html"><i class="feather-star"></i><span>Reviews</span></a></li>                                                        
+                                                    <li><a th:href="@{/course/coach_dashboard}"><i class="feather-home"></i><span>教練主頁</span></a></li>
+                                                    <li><a th:href="@{/course/coach_course}"><i class="feather-monitor"></i><span>課程管理</span></a></li>
+                                                    <li><a th:href="@{/course/course_announcement}"><i class="feather-volume-2"></i><span>課程公告</span></a></li>
+                                                    <li><a th:href="@{/adCarousel/addAdCarousel}"><i class="feather-bookmark"></i><span>廣告投放</span></a></li>
+                                                    <li><a href="instructor-order-history.html"><i class="feather-shopping-bag"></i><span>金流設定</span></a></li>                                                       
                                                 </ul>
                                             </nav>
 
