Update my course and history fix

--- a/src/main/resources/templates/front-end/mj/student_enrolled_courses.html
+++ b/src/main/resources/templates/front-end/mj/student_enrolled_courses.html
@@ -43,7 +43,7 @@
         }
 
         .bg_image--23 {
-            background-image: url("../images/bg/bbyoda-eggs-1605104824.jpg");
+            background-image: url("../images/bg/bbyoda.jpg");
         }
     </style>
 </head>
