--- a/src/main/resources/templates/front-end/socialpost/student_settings.html
+++ b/src/main/resources/templates/front-end/socialpost/student_settings.html
@@ -862,7 +862,7 @@
                     <div class="row g-5">
                         <div class="col-lg-3">
                             <!-- Start Dashboard Sidebar  -->
-                            <div th:replace="front-end/coachsidebar.html"></div>
+                            <div th:replace="front-end/member_sidebar.html"></div>
                             <!-- End Dashboard Sidebar  -->
                         </div>
 
@@ -882,11 +882,11 @@
                                                     <span class="title">個人資料</span>
                                                 </a>
                                             </li>
-                                            <li role="presentation">
-                                                <a href="#" class="tab-button" id="social-tab" data-bs-toggle="tab" data-bs-target="#social" role="tab" aria-controls="social" aria-selected="false">
-                                                    <span class="title">教練資料</span>
-                                                </a>
-                                            </li>
+<!--                                             <li role="presentation"> -->
+<!--                                                 <a href="#" class="tab-button" id="social-tab" data-bs-toggle="tab" data-bs-target="#social" role="tab" aria-controls="social" aria-selected="false"> -->
+<!--                                                     <span class="title">教練資料</span> -->
+<!--                                                 </a> -->
+<!--                                             </li> -->
                                             <li role="presentation">
                                                 <a href="#" class="tab-button" id="password-tab" data-bs-toggle="tab" data-bs-target="#password" role="tab" aria-controls="password" aria-selected="false">
                                                     <span class="title">密碼設定</span>
@@ -1019,11 +1019,11 @@
 <!--                                             </form> -->
 <!--                                             <div th:if="${iscoachSuccess}"> -->
 <!-- 										        <script th:inline="javascript"> -->
-// 										        setTimeout(function() {
-// 										        		alert('教練資料更改成功！'); 
-// 												},1)    
+<!-- // 										        setTimeout(function() { -->
+<!-- // 										        		alert('教練資料更改成功！');  -->
+<!-- // 												},1)     -->
 												
-// 										         // 如果处理失败，则弹出提示框
+<!-- // 										         // 如果处理失败，则弹出提示框 -->
 <!-- 										        </script> -->
 <!-- 										    </div> -->
 <!--                                             End Profile Row  -->
