--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -37,7 +37,7 @@
                                 <!--                                </ul>-->
                             </li>
                             <li class="has-dropdown has-menu-child-item">
-                                <a href="#">討論區
+                                <a th:href="@{/forumpost/listAllForumPost}">討論區
                                     <!--                                    <i class="feather-chevron-down"></i>-->
                                 </a>
 
