--- a/src/main/resources/templates/front-end/forumpost/g2_blog_details.html
+++ b/src/main/resources/templates/front-end/forumpost/g2_blog_details.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="rbt-header-sticky">
-	<header th:insert="~{/front-end/included-header}"></header>
+	<header th:insert="~{/front-end/header}"></header>
 
     <!-- Mobile Menu Section -->
     <div class="popup-mobile-menu">
@@ -986,116 +986,50 @@
                             </div>
                         </div> -->
 
-<div class="comment-respond">
-    <h4 class="title">留言</h4>
-    <form th:action="@{insert}" method="post" th:object="${ForumReplyVO}" class="row">
-    
-		<div class="blog-add">
-            <p>用戶ID</p>
-            <select  th:field="*{userVO.uId}">
-                <option th:each="user : ${userListData}" th:value="${user.uId}" th:text="${user.uNickname}" />
-            </select>
-        </div>
-                
-        <!-- 回文区块 -->
-        <div class="col-12">
-            <div class="form-group">
-                <label for="message">Leave a Reply</label>
-                <textarea id="message" name="frContent" th:field="*{frContent}"></textarea>
-            </div>
-        </div>
+<!-- <!-- 留言表單 --> 
+<!-- <div class="comment-respond"> -->
+<!--     <h4 class="title">留言</h4> -->
+<!--     <form action="/details/reply" method="post" class="row" enctype="multipart/form-data"> -->
+<!--         <input type="hidden" name="fpId" value="${forumPostVO.fpId}" /> -->
+<!--         <div class="blog-add"> -->
+<!--             <p>用戶ID</p> -->
+<!--             <select name="userId"> -->
+<!--                 <option th:each="user : ${userListData}" th:value="${user.uId}" th:text="${user.uNickname}" /> -->
+<!--             </select> -->
+<!--         </div> -->
+<!--         <div class="col-12"> -->
+<!--             <div class="form-group"> -->
+<!--                 <label for="message">Leave a Reply</label> -->
+<!--                 <textarea id="message" name="frContent" th:field="*{frContent}"></textarea> -->
+<!--             </div> -->
+<!--         </div> -->
         
-        <div>
-				<p>插入圖片</p>
-				<input type="file" name="frPic">
-				</div>
+<!--         <div class="col-lg-12"> -->
+<!--             <button type="submit" class="rbt-btn btn-gradient icon-hover radius-round btn-md"> -->
+<!--                 <span class="btn-text">新增回覆</span> -->
+<!--                 <span class="btn-icon"><i class="feather-arrow-right"></i></span> -->
+<!--             </button> -->
+<!--         </div> -->
+<!--     </form> -->
+<!-- </div> -->
+<!-- <!-- 回复列表 --> 
+<!-- <div class="rbt-comment-area"> -->
+<!--     <h4 class="title" th:text="${#lists.size(forumReplyVO)} + ' 則留言'"></h4> -->
+<!--     <ul class="comment-list"> -->
+<!--         <li class="comment" th:each="forumReply : ${forumReplyVO}"> -->
+<!--             <div class="comment-body"> -->
+<!--                 <p th:text="${forumReply.frContent}"></p> -->
+<!--                 <div class="comment-author"> -->
+<!--                     <span class="author" th:text="${forumReply.userVO.uNickname}"></span> -->
+<!--                     <span class="comment-date" th:text="${forumReply.frTime}"></span> -->
+<!--                 </div> -->
+<!--             </div> -->
+<!--         </li> -->
+<!--     </ul> -->
+<!-- </div> -->
+<!--             </div> -->
 
-        <div class="col-lg-12">
-            <button type="submit" class="rbt-btn btn-gradient icon-hover radius-round btn-md">
-                <span class="btn-text">新增回复</span>
-                <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-            </button>
-        </div>
-    </form>
-</div>
-            </div>
-
-            <div class="rbt-comment-area">
-                <!-- 回文數量統計 -->
-                <h4 class="title">2 comments</h4>
-                <ul class="comment-list">
-                    <!-- Start Single Comment  -->
-                    <li class="comment">
-                        <div class="comment-body">
-                            <div class="single-comment">
-                                <div class="comment-img">
-                                    <!-- 回文作者大頭照 -->
-                                    <img src="assets/images/testimonial/testimonial-1.jpg" alt="Author Images">
-                                </div>
-                                <div class="comment-inner">
-                                    <h6 class="commenter">
-                                        <!-- 回文作者 -->
-                                        <a href="#">Cameron Williamson</a>
-                                    </h6>
-                                    <div class="comment-meta">
-                                        <!-- 回文時間 -->
-                                        <div class="time-spent">Nov 23, 2018 at 12:23 pm</div>
-                                        
-                                    </div>
-                                    <!-- 文本 -->
-                                    <div class="comment-text">
-                                        <p comment-reply-linklass="b2">Duis hendrerit velit scelerisque felis tempus, id porta
-                                            libero venenatis. Nulla facilisi. Phasellus viverra
-                                            magna commodo dui lacinia tempus. Donec malesuada nunc
-                                            non dui posuere, fringilla vestibulum urna mollis.
-                                            Integer condimentum ac sapien quis maximus. </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <ul class="children">
-                            <!-- Start Single Comment  -->
-                            <li class="comment">
-                                <div class="comment-body">
-                                    
-                                </div>
-                            </li>
-                            <!-- End Single Comment  -->
-                        </ul>
-                    </li>
-                    <!-- End Single Comment  -->
-
-                    <!-- Start Single Comment  -->
-                    <li class="comment">
-                        <div class="comment-body">
-                            <div class="single-comment">
-                                <div class="comment-img">
-                                    <img src="assets/images/testimonial/testimonial-3.jpg" alt="Author Images">
-                                </div>
-                                <div class="comment-inner">
-                                    <h6 class="commenter">
-                                        <a href="#">Rafin Shuvo</a>
-                                    </h6>
-                                    <div class="comment-meta">
-                                        <div class="time-spent">Nov 23, 2018 at 12:23 pm</div>
-                                        
-                                    </div>
-                                    <div class="comment-text">
-                                        <p class="b2">Duis hendrerit velit scelerisque felis tempus, id porta
-                                            libero venenatis. Nulla facilisi. Phasellus viverra
-                                            magna commodo dui lacinia tempus. Donec malesuada nunc
-                                            non dui posuere, fringilla vestibulum urna mollis.
-                                            Integer condimentum ac sapien quis maximus. </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <!-- End Single Comment  -->
-                </ul>
-            </div>
-
-        </div>
+<!--         </div> -->
 
 
 
