小新 後台 樣式

--- a/src/main/resources/templates/back-end/backend_ad.html
+++ b/src/main/resources/templates/back-end/backend_ad.html
@@ -2,6 +2,30 @@
 <html lang="en">
 
 <head th:insert="~{/back-end/backend_included_head}"></head>
+<!-- <head> -->
+<style>
+.ad-text2{
+margin-left:40px;
+padding-top:20px;
+    margin-bottom: 15px;
+}
+.ad-text2 h3{
+font-size :25px;
+
+}
+
+button#submit{
+margin-top:20px;
+}
+
+.ad-content{
+padding-bottom:20px;
+}
+</style>
+
+
+</head>
+
 
 <body>
 	<!-- header -->
@@ -29,7 +53,7 @@
 
 					<table class="backstage_table">
 
-						<div cl-ass="ad-text2">
+						<div class="ad-text2">
 							<h3>廣告方案:首頁輪播廣告</h3>
 						</div>
 
