--- a/src/main/resources/templates/back-end/backend_adlistall.html
+++ b/src/main/resources/templates/back-end/backend_adlistall.html
@@ -59,9 +59,17 @@ th, td {
 }
 
 .ad-container {
-	padding-top: 80px;
-	padding-left: 20px;
+	padding-top: 140px;
+	padding-left: 40px;
 }
+
+h3{
+font-size: 25px;
+    text-align: left;
+    margin-bottom: 45px;
+}
+
+
 </style>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <!-- ●●js  for jquery datatables 用 -->
@@ -127,6 +135,7 @@ th, td {
 		<div th:replace="~{/back-end/backend_included_sidebar}"></div>
 		<div class="ad-container">
 			<div align="center">
+			<h3>全部廣告方案</h3>
 				<b><font color=red>第<label id="currentPage">1</label>/<label
 						id="pageNumber"></label>頁
 				</font></b> <b>● 所有廣告方案 如 下 所 示 : 共 <font color=red
