--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -42,12 +42,12 @@
                                 </a>
 
                             </li>
-                            <li class="has-dropdown has-menu-child-item">
-                                <a href="#">TDEE／FFMI 計算公式
-                                    <!--                                    <i class="feather-chevron-down"></i>-->
-                                </a>
+<!--                             <li class="has-dropdown has-menu-child-item"> -->
+<!--                                 <a href="#">TDEE／FFMI 計算公式 -->
+<!--                                                                        <i class="feather-chevron-down"></i> -->
+<!--                                 </a> -->
 
-                            </li>
+<!--                             </li> -->
 
                         </ul>
                     </nav>
