--- a/src/main/resources/templates/front-end/member_sidebar.html
+++ b/src/main/resources/templates/front-end/member_sidebar.html
@@ -17,16 +17,16 @@
 								class="feather-user"></i><span>意見回饋</span></a></li>
 						<li><a href="student-enrolled-courses.html"><i
 								class="feather-book-open"></i><span>我的課程</span></a></li>
-						<li><a href="student-wishlist.html"><i
-								class="feather-bookmark"></i><span>願望清單</span></a></li>
+<!-- 						<li><a href="student-wishlist.html"><i -->
+<!-- 								class="feather-bookmark"></i><span>願望清單</span></a></li> -->
 						<li><a href="student-reviews.html"><i
 								class="feather-star"></i><span>我的評論</span></a></li>
-						<li><a href="student-my-quiz-attempts.html"><i
-								class="feather-help-circle"></i><span>我的問答</span></a></li>
+<!-- 						<li><a href="student-my-quiz-attempts.html"><i -->
+<!-- 								class="feather-help-circle"></i><span>我的問答</span></a></li> -->
 						<li><a th:href="@{/order/order_history}"><i
 								class="feather-shopping-bag"></i><span>歷史訂單</span></a></li>
-						<li><a href="student-gift-history.html"><i
-								class="feather-shopping-bag"></i><span>收禮紀錄</span></a></li>
+<!-- 						<li><a href="student-gift-history.html"><i -->
+<!-- 								class="feather-shopping-bag"></i><span>收禮紀錄</span></a></li> -->
 					</ul>
 				</nav>
 
