--- a/src/main/resources/templates/front-end/forumpost/g2_blog_update_article.html
+++ b/src/main/resources/templates/front-end/forumpost/g2_blog_update_article.html
@@ -3,118 +3,125 @@
 <head th:insert="~{/front-end/included-head}"></head>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Blog List - Online Courses & Education Bootstrap5 Template</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>Blog List - Online Courses & Education Bootstrap5
+	Template</title>
+<meta name="robots" content="noindex, follow" />
+<meta name="description" content="">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/x-icon"
+	href="assets/images/favicon.png">
 
 </head>
 
 
 
 <body class="rbt-header-sticky">
-<header th:insert="~{/front-end/included-header}"></header>
+	<header th:insert="~{/front-end/included-header}"></header>
 
-<div class="rbt-page-banner-wrapper">
-    <!-- Start Banner BG Image  -->
-    <div class="rbt-banner-image"></div>
-    <!-- End Banner BG Image  -->
-    <div class="rbt-banner-content">
-        <br>
-        <div class="rbt-banner-content-inner-container">
-<form th:action="@{update}" method="post" th:object="${forumPostVO}" enctype="multipart/form-data">
-    <input type="hidden" th:field="*{fpId}" /> <!-- 添加文章ID欄位 -->
-    <p>文章分類</p>
-    <select name="fpCategory" id="fpCategory">
-        <option value="重量訓練">重量訓練</option>
-        <option value="皮拉提斯">皮拉提斯</option>
-        <option value="有氧訓練">有氧訓練</option>
-        <option value="徒手健身">徒手健身</option>
-        <option value="飲食分享">飲食分享</option>
-    </select>
+	<div class="rbt-page-banner-wrapper">
+		<!-- Start Banner BG Image  -->
+		<div class="rbt-banner-image"></div>
+		<!-- End Banner BG Image  -->
+		<div class="rbt-banner-content">
+			<br>
+			<div class="rbt-banner-content-inner-container">
+				<form th:action="@{update}" method="post" th:object="${forumPostVO}"
+					enctype="multipart/form-data">
+					<input type="hidden" th:field="*{fpId}" />
+					<!-- 添加文章ID欄位 -->
+					<p>文章分類</p>
+					<select name="fpCategory" id="fpCategory">
+						<option value="重量訓練"
+							th:selected="${forumPostVO.fpCategory == '重量訓練'}">重量訓練</option>
+						<option value="皮拉提斯"
+							th:selected="${forumPostVO.fpCategory == '皮拉提斯'}">皮拉提斯</option>
+						<option value="有氧訓練"
+							th:selected="${forumPostVO.fpCategory == '有氧訓練'}">有氧訓練</option>
+						<option value="徒手健身"
+							th:selected="${forumPostVO.fpCategory == '徒手健身'}">徒手健身</option>
+						<option value="飲食分享"
+							th:selected="${forumPostVO.fpCategory == '飲食分享'}">飲食分享</option>
+					</select>
 
-                
-                <div class="blog-add">
-        <p>用戶ID</p>
-        <select th:field="*{userVO.uId}">
-            <option th:each="user : ${userListData}" th:value="${user.uId}" th:text="${user.uNickname}" />
-        </select>
-    </div>
 
-    <div class="blog-add">
-        <p>文章標題</p>
-        <input type="text" th:field="*{fpTitle}">
-    </div>
+					<div class="blog-add"></div>
 
-    <div class="blog-add">
-        <p>文章內容</p>
-        <textarea name="fpContent" id="fpContent" cols="30" rows="10" th:field="*{fpContent}"></textarea>
-    </div>
+					<div class="blog-add">
+						<p>文章標題</p>
+						<input type="text" th:field="*{fpTitle}">
+					</div>
 
-    <div>
-        <p>插入圖片</p>
-        <input type="file" name="fpPic">
-    </div>
+					<div class="blog-add">
+						<p>文章內容</p>
+						<textarea name="fpContent" id="fpContent" cols="30" rows="10"
+							th:field="*{fpContent}"></textarea>
+					</div>
 
-    <button type="submit">儲存</button>
-    <button type="button" onclick="window.history.back();">取消</button>
-</form>
-        </div>
-        <br>
-    </div>
-</div>
-    <!-- End Card Style -->
+					<div>
+						<p>插入圖片</p>
+						<input type="file" name="fpPic">
+					</div>
 
-    <div class="rbt-separator-mid">
-        <div class="container">
-            <hr class="rbt-separator m-0">
-        </div>
-    </div>
+					<button type="submit">儲存</button>
+					<button type="button" onclick="window.history.back();">取消</button>
+				</form>
+			</div>
+			<br>
+		</div>
+	</div>
+	<!-- End Card Style -->
+
+	<div class="rbt-separator-mid">
+		<div class="container">
+			<hr class="rbt-separator m-0">
+		</div>
+	</div>
 	<footer th:replace="front-end/footer.html"></footer>
 
-    <div class="rbt-progress-parent">
-        <svg class="rbt-back-circle svg-inner" width="100%" height="100%" viewBox="-1 -1 102 102">
+	<div class="rbt-progress-parent">
+		<svg class="rbt-back-circle svg-inner" width="100%" height="100%"
+			viewBox="-1 -1 102 102">
             <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
         </svg>
-    </div>
+	</div>
 
-    <!-- JS
+	<!-- JS
 ============================================ -->
-    <!-- Modernizer JS -->
-    <script src="assets/js/vendor/modernizr.min.js"></script>
-    <!-- jQuery JS -->
-    <script src="assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <!-- sal.js -->
-    <script src="assets/js/vendor/sal.js"></script>
-    <script src="assets/js/vendor/swiper.js"></script>
-    <script src="assets/js/vendor/magnify.min.js"></script>
-    <script src="assets/js/vendor/jquery-appear.js"></script>
-    <script src="assets/js/vendor/odometer.js"></script>
-    <script src="assets/js/vendor/backtotop.js"></script>
-    <script src="assets/js/vendor/isotop.js"></script>
-    <script src="assets/js/vendor/imageloaded.js"></script>
+	<!-- Modernizer JS -->
+	<script src="assets/js/vendor/modernizr.min.js"></script>
+	<!-- jQuery JS -->
+	<script src="assets/js/vendor/jquery.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="assets/js/vendor/bootstrap.min.js"></script>
+	<!-- sal.js -->
+	<script src="assets/js/vendor/sal.js"></script>
+	<script src="assets/js/vendor/swiper.js"></script>
+	<script src="assets/js/vendor/magnify.min.js"></script>
+	<script src="assets/js/vendor/jquery-appear.js"></script>
+	<script src="assets/js/vendor/odometer.js"></script>
+	<script src="assets/js/vendor/backtotop.js"></script>
+	<script src="assets/js/vendor/isotop.js"></script>
+	<script src="assets/js/vendor/imageloaded.js"></script>
 
-    <script src="assets/js/vendor/wow.js"></script>
-    <script src="assets/js/vendor/waypoint.min.js"></script>
-    <script src="assets/js/vendor/easypie.js"></script>
-    <script src="assets/js/vendor/text-type.js"></script>
-    <script src="assets/js/vendor/jquery-one-page-nav.js"></script>
-    <script src="assets/js/vendor/bootstrap-select.min.js"></script>
-    <script src="assets/js/vendor/jquery-ui.js"></script>
-    <script src="assets/js/vendor/magnify-popup.min.js"></script>
-    <script src="assets/js/vendor/paralax-scroll.js"></script>
-    <script src="assets/js/vendor/paralax.min.js"></script>
-    <script src="assets/js/vendor/countdown.js"></script>
-    <script src="assets/js/vendor/plyr.js"></script>
-    <!-- Main JS -->
-    <script src="assets/js/main.js"></script>
+	<script src="assets/js/vendor/wow.js"></script>
+	<script src="assets/js/vendor/waypoint.min.js"></script>
+	<script src="assets/js/vendor/easypie.js"></script>
+	<script src="assets/js/vendor/text-type.js"></script>
+	<script src="assets/js/vendor/jquery-one-page-nav.js"></script>
+	<script src="assets/js/vendor/bootstrap-select.min.js"></script>
+	<script src="assets/js/vendor/jquery-ui.js"></script>
+	<script src="assets/js/vendor/magnify-popup.min.js"></script>
+	<script src="assets/js/vendor/paralax-scroll.js"></script>
+	<script src="assets/js/vendor/paralax.min.js"></script>
+	<script src="assets/js/vendor/countdown.js"></script>
+	<script src="assets/js/vendor/plyr.js"></script>
+	<!-- Main JS -->
+	<script src="assets/js/main.js"></script>
 </body>
 
 </html>
