--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -119,7 +119,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="/mj/student_reviews">
+                                            <a href="/course/my_courses">
                                                 <i class="feather-star"></i>
                                                 <span>我的評論</span>
                                             </a>
