--- a/src/main/resources/templates/front-end/footer.html
+++ b/src/main/resources/templates/front-end/footer.html
@@ -13,34 +13,34 @@
                             <p class="description mt--20">你在嘛有人在嘛你們還好嗎我喜歡健身健身
                             </p>
 
-                            <ul class="social-icon social-default justify-content-start">
-                                <li><a href="https://www.facebook.com/">
-                                        <i class="feather-facebook"></i>
-                                    </a>
-                                </li>
-                                <li><a href="https://www.twitter.com">
-                                        <i class="feather-twitter"></i>
-                                    </a>
-                                </li>
-                                <li><a href="https://www.instagram.com/">
-                                        <i class="feather-instagram"></i>
-                                    </a>
-                                </li>
-                                <li><a href="https://www.linkdin.com/">
-                                        <i class="feather-linkedin"></i>
-                                    </a>
-                                </li>
-                            </ul>
+<!--                             <ul class="social-icon social-default justify-content-start"> -->
+<!--                                 <li><a href="https://www.facebook.com/"> -->
+<!--                                         <i class="feather-facebook"></i> -->
+<!--                                     </a> -->
+<!--                                 </li> -->
+<!--                                 <li><a href="https://www.twitter.com"> -->
+<!--                                         <i class="feather-twitter"></i> -->
+<!--                                     </a> -->
+<!--                                 </li> -->
+<!--                                 <li><a href="https://www.instagram.com/"> -->
+<!--                                         <i class="feather-instagram"></i> -->
+<!--                                     </a> -->
+<!--                                 </li> -->
+<!--                                 <li><a href="https://www.linkdin.com/"> -->
+<!--                                         <i class="feather-linkedin"></i> -->
+<!--                                     </a> -->
+<!--                                 </li> -->
+<!--                             </ul> -->
 
-                            <div class="contact-btn mt--30">
-                                <a class="rbt-btn hover-icon-reverse btn-border-gradient radius-round" href="#">
-                                    <div class="icon-reverse-wrapper">
-                                        <span class="btn-text">Contact With Us</span>
-                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                    </div>
-                                </a>
-                            </div>
+<!--                             <div class="contact-btn mt--30"> -->
+<!--                                 <a class="rbt-btn hover-icon-reverse btn-border-gradient radius-round" href="#"> -->
+<!--                                     <div class="icon-reverse-wrapper"> -->
+<!--                                         <span class="btn-text">Contact With Us</span> -->
+<!--                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span> -->
+<!--                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span> -->
+<!--                                     </div> -->
+<!--                                 </a> -->
+<!--                             </div> -->
                         </div>
                     </div>
 
@@ -62,37 +62,37 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget">
-                            <h5 class="ft-title">會員</h5>
-                            <ul class="ft-link">
-                                <li>
-                                    <a href="contact.html">會員中心</a>
-                                </li>
-                                <li>
-                                    <a href="become-a-teacher.html">最新消息</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">我的課程</a>
-                                </li>
-                                <li>
-                                    <a href="instructor.html">願望清單</a>
-                                </li>
-                                <li>
-                                    <a href="event-list.html">我的評論</a>
-                                </li>
-                                <li>
-                                    <a href="course-filter-one-toggle.html">我的問答</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">歷史訂單</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">收禮紀錄</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+<!--                     <div class="col-lg-2 col-md-6 col-sm-6 col-12"> -->
+<!--                         <div class="footer-widget"> -->
+<!--                             <h5 class="ft-title">會員</h5> -->
+<!--                             <ul class="ft-link"> -->
+<!--                                 <li> -->
+<!--                                     <a href="contact.html">會員中心</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="become-a-teacher.html">最新消息</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="blog.html">我的課程</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="instructor.html">願望清單</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="event-list.html">我的評論</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="course-filter-one-toggle.html">我的問答</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="contact.html">歷史訂單</a> -->
+<!--                                 </li> -->
+<!--                                 <li> -->
+<!--                                     <a href="contact.html">收禮紀錄</a> -->
+<!--                                 </li> -->
+<!--                             </ul> -->
+<!--                         </div> -->
+<!--                     </div> -->
 
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget">
@@ -106,16 +106,16 @@
                                 <!-- <h6 class="w-600">Newsletter</h6>
                                 <p class="description">2000+ Our students are subscribe Around the World.<br> Don’t be shy introduce yourself!</p> -->
 
-                                <div class="form-group right-icon icon-email mb--20">
-                                    <label for="email">Enter Your Email Here</label>
-                                    <input id="email" type="email">
-                                </div>
+<!--                                 <div class="form-group right-icon icon-email mb--20"> -->
+<!--                                     <label for="email">Enter Your Email Here</label> -->
+<!--                                     <input id="email" type="email"> -->
+<!--                                 </div> -->
 
-                                <div class="form-group mb--0">
-                                    <button class="rbt-btn rbt-switch-btn btn-gradient radius-round btn-sm" type="submit">
-                                        <span data-text="Submit Now">Submit Now</span>
-                                    </button>
-                                </div>
+<!--                                 <div class="form-group mb--0"> -->
+<!--                                     <button class="rbt-btn rbt-switch-btn btn-gradient radius-round btn-sm" type="submit"> -->
+<!--                                         <span data-text="Submit Now">Submit Now</span> -->
+<!--                                     </button> -->
+<!--                                 </div> -->
                             </form>
                         </div>
                     </div>
