--- a/src/main/resources/templates/back-end/backend_included_sidebar.html
+++ b/src/main/resources/templates/back-end/backend_included_sidebar.html
@@ -1,8 +1,8 @@
 <div class="side-bar">
 	<ul>
-		<li><a href=""> 用戶管理 </a>
+		<li><a href=""> 會員管理 </a>
 			<ol>
-				<li><a href="/backend_userlist" class="nav">用戶名單</a></li>
+				<li><a href="/backend_userlist" class="nav">會員名單</a></li>
 			</ol></li>
 		<li><a href="">買賣課程管理</a>
 			<ol class="dropdown">
@@ -16,7 +16,7 @@
 			</ol></li>
 		<li><a href="">意見管理</a>
 			<ol class="dropdown">
-				<li><a href="/backend_opinion" class="nav">收件匣</a></li>
+				<li><a href="/backend_opinion" class="nav">會員意見收件匣</a></li>
 			</ol></li>
 		<li><a href="">最新消息</a>
 			<ol class="dropdown">
