--- a/src/main/resources/templates/back-end/backend_opinion.html
+++ b/src/main/resources/templates/back-end/backend_opinion.html
@@ -22,7 +22,7 @@
 
         <!-- 內容 -->
         <div class="content">
-            <h1>收件匣</h1>
+            <h1>會員意見收件匣</h1>
 
             <ul class="row rhead"
                 style="display: flex; justify-content: space-between; width: calc(765px - 40px); padding: 0 20px; gap: 10px;">
