--- a/src/main/resources/templates/front-end/opinion/student_opinion.html
+++ b/src/main/resources/templates/front-end/opinion/student_opinion.html
@@ -1051,7 +1051,7 @@
 							<div class="rbt-dashboard-content bg-color-white rbt-shadow-box">
 								<div class="content">
 									<div class="section-title">
-										<h4 class="rbt-title-style-3">意見回饋</h4>
+										<h4 class="rbt-title-style-3">意見回饋紀錄</h4>
 									</div>
 
 									<div class="opinion-table">
