--- a/src/main/resources/templates/front-end/member_sidebar.html
+++ b/src/main/resources/templates/front-end/member_sidebar.html
@@ -13,7 +13,7 @@
 								class="feather-home"></i><span>會員社群</span></a></li>
 						<li><a href="/socialpost/news"><i
 								class="feather-user"></i><span>最新消息</span></a></li>
-						<li><a href="student-profile.html"><i
+						<li><a href="/opinion/user_opinion_list"><i
 								class="feather-user"></i><span>意見回饋</span></a></li>
 						<li><a href="student-enrolled-courses.html"><i
 								class="feather-book-open"></i><span>我的課程</span></a></li>
