--- a/src/main/resources/templates/front-end/ad/instructor_advertising.html
+++ b/src/main/resources/templates/front-end/ad/instructor_advertising.html
@@ -957,25 +957,30 @@
                                 <div class="tutor-content">
                                     <h5 class="title"><span th:text="${ForPhotoUserVO.uName}"></span></h5>
                                     <div class="rbt-review">
-                                        <div class="rating">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                        </div>
-                                        <span class="rating-count"> (15 Reviews)</span>
+<!--                                         <div class="rating"> -->
+<!--                                             <i class="fas fa-star"></i> -->
+<!--                                             <i class="fas fa-star"></i> -->
+<!--                                             <i class="fas fa-star"></i> -->
+<!--                                             <i class="fas fa-star"></i> -->
+<!--                                             <i class="fas fa-star"></i> -->
+<!--                                         </div> -->
+<!--                                         <span class="rating-count"> (15 Reviews)</span> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="rbt-tutor-information-right">
                                 <div class="tutor-btn">
-                                    <a class="rbt-btn btn-md hover-icon-reverse" href="/socialpost">
-                                        <span class="icon-reverse-wrapper">
-                                            <a href="/socialpost"><span class="btn-text">切換為學生模式</span></a>
-                                            <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                        </span>
+                                    <a class="rbt-btn btn-md hover-icon-reverse" href="/course/my_courses">                                                                                                                                
+<!--                                             <a class="rbt-btn btn-md hover-icon-reverse" href="/socialpost">  -->
+                                            <span
+										class="icon-reverse-wrapper"> <span class="btn-text">切換為學生模式</span>
+											<span class="btn-icon"><i class="feather-arrow-right"></i></span>
+											<span class="btn-icon"><i class="feather-arrow-right"></i></span>
+									</span>
+<!-- 									</a> -->
+									
+									
+									
                                     </a>
                                 </div>
                             </div>
