--- a/src/main/resources/templates/front-end/coachsidebar.html
+++ b/src/main/resources/templates/front-end/coachsidebar.html
@@ -20,7 +20,7 @@
                                                     <li><a th:href="@{/course/coach_course}"><i class="feather-monitor"></i><span>課程管理</span></a></li>
                                                     <li><a th:href="@{/course/course_announcement}"><i class="feather-volume-2"></i><span>課程公告</span></a></li>
                                                     <li><a th:href="@{/adCarousel/addAdCarousel}"><i class="feather-bookmark"></i><span>廣告投放</span></a></li>                                                     
-                                                    <li><a th:href="@{/course/create_course}"><i class="create new coruse"></i><span>創建課程</span></a></li>                                                     
+                                                    <li><a th:href="@{/course/create_course}"><i class="feather-bookmark"></i><span>創建課程</span></a></li>                                                     
                                                 </ul>
                                             </nav>
 
