--- a/src/main/resources/templates/back-end/backend_social.html
+++ b/src/main/resources/templates/back-end/backend_social.html
@@ -122,49 +122,26 @@
     </div> -->
     
             <table class="backstage_table">
-            <td class="social-text"><h3>討論區貼文</h3></td>
+            <td class="forum-text"><h3>討論區貼文</h3></td>
             <tr>
                 <th>貼文編號</th>
-                <th>貼文名稱</th>
-                <th>貼文內容是否有違反社群規定?</th>
+                <th>會員暱稱</th>
+                <th>貼文標題</th>
                 <th>文章狀態</th>
                 <th>操作</th>
             </tr>
-            <tr>
-              <td>C0001</td>
-              <td>跑者必修！馬拉松完賽全方位跑典</td>
-              <td>否</td>
-              <td>未下架</td>
-              <td><button>編輯</button></td>
-            </tr>
-            <tr>
-              <td>C0002</td>
-              <td>多位專家搭配，從訓練、營養、心理、傷害防護等</td>
-              <td>否</td>
-              <td>未下架</td>
-              <td><button>編輯</button></td>
-            </tr>
-            <tr>
-              <td>C0003</td>
-              <td>建立起有系統性的全方位的馬拉松課程</td>
-              <td>否</td>
-              <td>未下架</td>
-              <td><button>編輯</button></td>
-            </tr>
-            <tr>
-              <td>C0004</td>
-              <td>就是要讓你最有效率的完成馬拉松</td>
-              <td>否</td>
-              <td>未下架</td>
-              <td><button>編輯</button></td>
-            </tr>
-            <tr>
-              <td>C0005</td>
-              <td>跑者必修！馬拉松完賽全方位跑典</td>
-              <td>否</td>
-              <td>未下架</td>
-              <td><button>編輯</button></td>
-            </tr>
+           <tr th:each="forumPosts : ${forumPosts}">
+            <td th:text="${forumPosts.fpId}"></td>
+            <td th:text="${forumPosts.userVO.uNickname}"></td>
+            <td th:text="${forumPosts.fpContent}"></td>
+<!--             <td th:text="">否</td> -->
+            <td th:text="${forumPosts.fpStatus == 1 ? '上架' : '下架'}"></td>
+            
+            <td><label class="toggle-switch">
+  <input type="checkbox" class="forum-toggle-switch-checkbox" style="display:none;" th:data-spid="${forumPosts.fpId}" th:checked="${forumPosts.fpStatus == 1}" />
+  <span class="toggle-switch-slider"></span>
+</label></td>
+          </tr>
             
               </div>           
           </div>  
@@ -189,37 +166,7 @@
 
 document.addEventListener('DOMContentLoaded', function() {
 
-    document.querySelectorAll('.social-edit-btn').forEach(function(button) {
-        button.addEventListener('click', function() {
-            var spid = this.getAttribute('data-spid'); 
-
-            fetch('/backend/updateSocialPostStatus', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json', 
-                },
-                body: JSON.stringify({
-                    spid: spid,
-                    spstatus: 0 
-                })
-            })
-            .then(function(response) {
-                if (!response.ok) {
-                    throw new Error('error');
-                }
-                return response.text(); 
-            })
-            .then(function(text) {
-                alert('成功更新');
-                location.reload();
-            })
-            .catch(function(error) {
-                alert('更新失敗');
-            });
-        });
-    });
-    
-    
+    // 社群貼文狀態更新
     document.querySelectorAll('.toggle-switch-checkbox').forEach(function(switchElement) {
         switchElement.addEventListener('change', function() {
           var spid = this.dataset.spid; 
@@ -257,25 +204,52 @@ document.addEventListener('DOMContentLoaded', function() {
           .catch(function(error) {
               alert('更新失敗');
           });
-
-
-
         });
       });
-    
-    
-    
-    
-    
-    
-    
-    
+
+    // 討論區貼文狀態更新
+    document.querySelectorAll('.forum-toggle-switch-checkbox').forEach(function(switchElement) {
+        switchElement.addEventListener('change', function() {
+          var fpId = this.dataset.spid; 
+          var fpStatus = this.checked ? 1 : 0; 
+          var newStatus = this.checked ? 1 : 0;          
+
+		  console.log("fpId:"+fpId);
+          console.log("fpStatus:"+fpStatus);
+          
+          fetch('/backend/updateForumPostStatus', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ 
+            	fpId: fpId, 
+            	fpStatus: fpStatus 
+           	})
+          })
+          .then(function(response) {
+              if (!response.ok) {
+                  throw new Error('error');
+              }
+              return response.text(); 
+          })
+          .then(function(text) {
+        	  if(newStatus == 1){
+        		  alert('成功上架');
+        	  }else{
+        		  alert('成功下架');
+        	  }
+             
+              location.reload();
+          })
+          .catch(function(error) {
+              alert('更新失敗');
+          });
+        });
+      });
 });
-	
-
-
-
 </script>
+
 </body>
 
 </html>
