--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 	}
 	
 	.chat-img{
-		
+		background-color:transparent;
 	}	
 	
 	</style>
@@ -956,15 +956,15 @@
 						<i class="feather-user"></i>
 						<p th:text="${forumPostVO.userVO.uNickname}">Joy老師</p>
 						<img src="./@{/images/calander.png" alt="">
-						<p>2023/12/26</p>
+						<p th:text="${forumPostVO.fpTime}">2023/12/26</p>
 						<img src="./@{/images/eye.png" alt="">
-						<p>2,580</p>
+<!-- 						<p >2,580</p> -->
 					</div>
 					<div class="title-2">
-						<h2>歐美超模的秘密：給零基礎的第一堂芭蕾雕塑</h2>
+						<h2 th:text="${forumPostVO.fpTitle}">歐美超模的秘密：給零基礎的第一堂芭蕾雕塑</h2>
 					</div>
 					<div class="title-3">
-						<p>奧黛麗赫本曾經說過：優美的姿態，來源於與知識同行而不是獨行。</p>
+						<p th:text="${forumPostVO.fpContent}">奧黛麗赫本曾經說過：優美的姿態，來源於與知識同行而不是獨行。</p>
 					</div>
 				</div>
 				<div class="chat-img">
@@ -973,27 +973,27 @@
 								alt="Card image">
 				</div>
 			</div>
-			<div class="chat-card">
-				<div class="chat-card-word">
-					<div class="title-1">
-						<i class="feather-user"></i>
-						<p>Joy老師</p>
-						<img src="./@{/images/calander.png" alt="">
-						<p>2023/12/26</p>
-						<img src="./@{/images/eye.png" alt="">
-						<p>2,580</p>
-					</div>
-					<div class="title-2">
-						<h2>歐美超模的秘密：給零基礎的第一堂芭蕾雕塑</h2>
-					</div>
-					<div class="title-3">
-						<p>奧黛麗赫本曾經說過：優美的姿態，來源於與知識同行而不是獨行。</p>
-					</div>
-				</div>
-				<div class="chat-img">
-					<img src="" alt="">
-				</div>
-			</div>
+<!-- 			<div class="chat-card"> -->
+<!-- 				<div class="chat-card-word"> -->
+<!-- 					<div class="title-1"> -->
+<!-- 						<i class="feather-user"></i> -->
+<!-- 						<p>Joy老師</p> -->
+<!-- 						<img src="./@{/images/calander.png" alt=""> -->
+<!-- 						<p>2023/12/26</p> -->
+<!-- 						<img src="./@{/images/eye.png" alt=""> -->
+<!-- 						<p>2,580</p> -->
+<!-- 					</div> -->
+<!-- 					<div class="title-2"> -->
+<!-- 						<h2>歐美超模的秘密：給零基礎的第一堂芭蕾雕塑</h2> -->
+<!-- 					</div> -->
+<!-- 					<div class="title-3"> -->
+<!-- 						<p>奧黛麗赫本曾經說過：優美的姿態，來源於與知識同行而不是獨行。</p> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
+<!-- 				<div class="chat-img"> -->
+<!-- 					<img src="" alt=""> -->
+<!-- 				</div> -->
+<!-- 			</div> -->
 		</div>
 <!-- 		<div class="chat-select-row"> -->
 <!-- 			<div class="chat-card"> -->
